fix: swagger configs and routing
